--- a/index 1.html
+++ b/index 1.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="main%201.css">
 </head>
 <body>
-<h1>Simpsons</h1>
+<h1> The Simpsons</h1>
 <img src="https://static.wikia.nocookie.net/simpsons/images/6/63/The_Simpsons_Simpsons_FamilyPicture.png"
      alt="Simpsons famyly">
 <p class="target">The Simpsons are the main protagonists of the TV show The Simpsons. The family first appeared
